--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Before leaving the world, everything is a process."
+description: "It's by second brain 🧠"
 ---
 
 {% for post in paginator.posts %}
